--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+</html>
+
+<head>
+    <title><Mary</title>
+</Mary>
+
+<body>
+
+    <p>
+        Welcome to Mary's Website
+    </p>
+
+    <p>
+        Updates are in progress, thanks for coming!
+    </p>
+
+</body>
+
+
 
